--- a/index.html
+++ b/index.html
@@ -3,24 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoTrack Web</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
+    <title>GeoTrack</title>
+    <style>
+        #map {
+            height: 100vh;
+            width: 100%;
+        }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?key=VOTRE_CLE_API_ICI"></script>
 </head>
 <body>
-    <div class="login-container" id="loginContainer">
-        <h1>GeoTrack</h1>
-        <input type="text" id="username" placeholder="Nom d'utilisateur">
-        <input type="password" id="password" placeholder="Mot de passe">
-        <button onclick="login()">Se connecter</button>
-    </div>
+    <div id="map"></div>
+    <script>
+        function initMap() {
+            navigator.geolocation.getCurrentPosition(position => {
+                const userLocation = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                };
 
-    <div id="mapContainer">
-        <div id="map"></div>
-        <button id="logoutBtn" onclick="logout()">Déconnexion</button>
-        <div id="explorationStats">Exploration : 0%</div>
-    </div>
+                const map = new google.maps.Map(document.getElementById('map'), {
+                    center: userLocation,
+                    zoom: 15
+                });
 
-    <script src="app.js"></script>
+                new google.maps.Marker({
+                    position: userLocation,
+                    map: map,
+                    title: "Vous êtes ici"
+                });
+            }, () => {
+                alert("Impossible de récupérer votre position.");
+            });
+        }
+
+        window.onload = initMap;
+    </script>
 </body>
 </html>
