--- a/index.html
+++ b/index.html
@@ -5,39 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTrack</title>
     <style>
-        #map {
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             height: 100vh;
-            width: 100%;
+            margin: 0;
+            background-color: #f4f4f9;
+        }
+        .login-container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+        input, button {
+            width: 80%;
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
         }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=VOTRE_CLE_API_ICI"></script>
 </head>
 <body>
-    <div id="map"></div>
-    <script>
-        function initMap() {
-            navigator.geolocation.getCurrentPosition(position => {
-                const userLocation = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
-                };
+    <div class="login-container">
+        <h1>GeoTrack</h1>
+        <input type="text" id="username" placeholder="Nom d'utilisateur">
+        <input type="password" id="password" placeholder="Mot de passe">
+        <button id="loginBtn">Se connecter</button>
+    </div>
 
-                const map = new google.maps.Map(document.getElementById('map'), {
-                    center: userLocation,
-                    zoom: 15
-                });
-
-                new google.maps.Marker({
-                    position: userLocation,
-                    map: map,
-                    title: "Vous êtes ici"
-                });
-            }, () => {
-                alert("Impossible de récupérer votre position.");
-            });
-        }
-
-        window.onload = initMap;
-    </script>
+    <!-- Lien vers le script -->
+    <script src="app.js"></script>
 </body>
 </html>
