--- a/index.html
+++ b/index.html
@@ -3,48 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoTrack</title>
+    <title>Connexion - GlobTrack</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #f4f4f9;
         }
         .login-container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            background-color: #fff;
+            padding: 20px 40px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
         }
-        input, button {
-            width: 80%;
-            margin: 10px 0;
+        .login-container img {
+            width: 100px;
+            margin-bottom: 20px;
+        }
+        .login-container input {
+            width: 100%;
             padding: 10px;
+            margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
-        button {
-            background-color: #4CAF50;
+        .login-container button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007BFF;
             color: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
+        }
+        .login-container button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h1>GeoTrack</h1>
-        <input type="text" id="username" placeholder="Nom d'utilisateur">
-        <input type="password" id="password" placeholder="Mot de passe">
-        <button id="loginBtn">Se connecter</button>
-    </div>
 
-    <!-- Lien vers le script -->
-    <script src="app.js"></script>
+<div class="login-container">
+    <img src="logo.png" alt="GlobTrack Logo">
+    <h2>Connexion à GlobTrack</h2>
+    <input type="text" id="username" placeholder="Nom d'utilisateur">
+    <input type="password" id="password" placeholder="Mot de passe">
+    <button id="loginBtn">Se connecter</button>
+
+    <!-- Connexion avec Google (Facultatif) -->
+    <div id="g_id_onload"
+         data-client_id="VOTRE_CLIENT_ID.apps.googleusercontent.com"
+         data-login_uri="map.html"
+         data-auto_prompt="false">
+    </div>
+    <div class="g_id_signin"
+         data-type="standard"
+         data-size="large"
+         data-theme="outline"
+         data-text="sign_in_with"
+         data-shape="rectangular"
+         data-logo_alignment="left">
+    </div>
+</div>
+
+<!-- Script Google Identity Services -->
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="app.js"></script>
 </body>
 </html>
