--- a/map.html
+++ b/map.html
@@ -3,41 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte - GeoTrack</title>
+    <title>Carte - GlobTrack</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
         #map {
-            height: 100vh;
-            width: 100%;
+            height: 100%;
         }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=VOTRE_CLE_API"></script>
 </head>
 <body>
-    <div id="map"></div>
-    <script>
-        function initMap() {
-            navigator.geolocation.getCurrentPosition(position => {
-                const userLocation = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
-                };
 
-                const map = new google.maps.Map(document.getElementById('map'), {
-                    center: userLocation,
-                    zoom: 15
-                });
+<div id="map"></div>
 
-                new google.maps.Marker({
-                    position: userLocation,
-                    map: map,
-                    title: "Vous êtes ici"
-                });
-            }, () => {
-                alert("Impossible de récupérer votre position.");
-            });
-        }
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="map.js"></script>
 
-        window.onload = initMap;
-    </script>
 </body>
 </html>
