--- a/map.html
+++ b/map.html
@@ -3,25 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte - GlobTrack</title>
+    <title>GlobTrack - Carte</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="style.css">
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
         #map {
-            height: 100%;
+            height: 90vh;
+            width: 100%;
+        }
+        .logout-btn {
+            margin: 10px;
+            background: #e74c3c;
         }
     </style>
 </head>
 <body>
+    <button class="logout-btn" onclick="logout()">Déconnexion</button>
+    <div id="map"></div>
 
-<div id="map"></div>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script>
+        let map, userPath = [], exploredAreas = [];
 
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="map.js"></script>
+        // Vérifier si l'utilisateur est connecté
+        if (!localStorage.getItem('currentUser')) {
+            window.location.href = 'index.html';
+        }
 
+        function initMap() {
+            map = L.map('map').fitWorld();
+
+            // Utiliser OpenStreetMap
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                maxZoom: 18,
+                attribution: '© OpenStreetMap'
+            }).addTo(map);
+
+            map.locate({ setView: true, maxZoom: 16 });
+
+            function onLocationFound(e) {
+                const userLocation = e.latlng;
+
+                // Marqueur de l'utilisateur
+                L.marker(userLocation).addTo(map).bindPopup("Vous êtes ici").openPopup();
+
+                userPath.push(userLocation);
+                addExploredArea(userLocation);
+
+                // Suivre les déplacements
+                map.on('locationfound', updatePosition);
+            }
+
+            function onLocationError(e) {
+                alert(e.message);
+            }
+
+            map.on('locationfound', onLocationFound);
+            map.on('locationerror', onLocationError);
+        }
+
+        function updatePosition(e) {
+            const newLocation = e.latlng;
+            userPath.push(newLocation);
+            addExploredArea(newLocation);
+
+            // Tracer le chemin parcouru
+            L.polyline(userPath, { color: '#4CAF50' }).addTo(map);
+        }
+
+        function addExploredArea(location) {
+            // Dégriser une zone de 50px autour de l'utilisateur
+            L.circle(location, {
+                color: '#4CAF50',
+                fillColor: '#4CAF50',
+                fillOpacity: 0.35,
+                radius: 50
+            }).addTo(map);
+        }
+
+        function logout() {
+            localStorage.removeItem('currentUser');
+            window.location.href = 'index.html';
+        }
+
+        initMap();
+    </script>
 </body>
 </html>
