--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
             font-weight: bold;
         }
 
+        .top-bar .right {
+            display: flex;
+            align-items: center;
+        }
+
         .top-bar .right img {
             width: 40px;
             height: 40px;
             border-radius: 50%;
+            cursor: pointer;
         }
 
         .exploration {
@@ -42,7 +48,8 @@
         }
 
         .logout-btn {
-            margin: 10px;
+            display: none;
+            margin-top: 10px;
             background: #e74c3c;
             padding: 10px;
             color: white;
@@ -67,23 +74,48 @@
         .upload-btn:hover {
             background-color: #2980b9;
         }
+
+        .profile-actions {
+            display: none;
+            flex-direction: column;
+            align-items: flex-end;
+            margin-top: 10px;
+        }
+
+        .profile-actions button {
+            padding: 10px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        .profile-actions button:hover {
+            background-color: #2980b9;
+        }
+
+        .top-bar .right:hover .profile-actions {
+            display: flex;
+        }
     </style>
 </head>
 <body>
     <!-- Top Bar -->
     <div class="top-bar">
-        <div class="left">☰</div>
+        <div class="left" id="menuToggle">☰</div>
         <div class="center" id="explorationPercentage">Exploration : 0%</div>
-        <div class="right">
+        <div class="right" id="profileSection">
             <div class="profile-container">
-                <img src="default-profile.png" id="profilePic" alt="Profile Picture">
+                <img src="default-profile.png" id="profilePic" alt="Profile Picture" onclick="toggleProfileActions()">
                 <input type="file" id="uploadProfilePic" class="upload-btn" onchange="updateProfilePic()" style="display:none;">
-                <button onclick="document.getElementById('uploadProfilePic').click()">Changer Photo</button>
+            </div>
+            <div class="profile-actions" id="profileActions">
+                <button onclick="logout()">Déconnexion</button>
             </div>
         </div>
     </div>
 
-    <button class="logout-btn" onclick="logout()">Déconnexion</button>
+    <button class="logout-btn" id="logoutBtn" onclick="logout()">Déconnexion</button>
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -93,7 +125,15 @@
 
         // Vérifier si l'utilisateur est connecté
         if (!currentUser) {
-            window.location.href = 'index.html';
+            window.location.href = 'login.html';  // Rediriger vers la page de connexion
+        }
+
+        // Afficher la photo de profil ou la demande de profil
+        if (!currentUser.profilePic) {
+            alert("Veuillez télécharger une photo de profil !");
+            window.location.href = 'profile.html'; // Rediriger pour uploader la photo
+        } else {
+            document.getElementById('profilePic').src = currentUser.profilePic;
         }
 
         // Initialisation de la carte
@@ -158,9 +198,21 @@
             document.getElementById('explorationPercentage').textContent = `Exploration : ${Math.round(explorationPercentage)}%`;
         }
 
+        function toggleProfileActions() {
+            const actions = document.getElementById('profileActions');
+            const logoutBtn = document.getElementById('logoutBtn');
+            if (actions.style.display === 'none' || actions.style.display === '') {
+                actions.style.display = 'flex';
+                logoutBtn.style.display = 'block';
+            } else {
+                actions.style.display = 'none';
+                logoutBtn.style.display = 'none';
+            }
+        }
+
         function logout() {
             localStorage.removeItem('currentUser');
-            window.location.href = 'index.html';
+            window.location.href = 'login.html';
         }
 
         function updateProfilePic() {
