--- a/login.html
+++ b/login.html
@@ -41,6 +41,12 @@
         button:hover {
             background-color: #2980b9;
         }
+
+        .register-link {
+            display: block;
+            margin-top: 10px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -50,6 +56,7 @@
     <input type="text" id="username" placeholder="Nom d'utilisateur" required>
     <input type="password" id="password" placeholder="Mot de passe" required>
     <button onclick="login()">Se connecter</button>
+    <a href="register.html" class="register-link">Pas encore de compte ? Inscris-toi ici</a>
 </div>
 
 <script>
@@ -57,10 +64,12 @@
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
 
-        const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+        const users = JSON.parse(localStorage.getItem('users')) || [];
+        const currentUser = users.find(user => user.username === username && user.password === password);
 
-        if (currentUser && currentUser.username === username && currentUser.password === password) {
-            window.location.href = 'index.html';  // Rediriger vers la carte
+        if (currentUser) {
+            localStorage.setItem('currentUser', JSON.stringify(currentUser));
+            window.location.href = 'index.html';  // Rediriger vers la carte après connexion
         } else {
             alert('Nom d\'utilisateur ou mot de passe incorrect');
         }
