--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion</title>
+    <title>Connexion / Inscription</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,14 +14,15 @@
             background-color: #f7f7f7;
         }
 
-        .login-container {
+        .container {
             background-color: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
         }
 
-        input[type="text"], input[type="password"] {
+        input[type="text"], input[type="password"], input[type="file"] {
             width: 100%;
             padding: 10px;
             margin: 5px 0;
@@ -36,51 +37,109 @@
             border: none;
             cursor: pointer;
             border-radius: 4px;
-            width: 48%;
-            margin-right: 4%;
+            width: 100%;
         }
 
         button:hover {
             background-color: #2980b9;
         }
 
-        .login-container .button-container {
-            display: flex;
-            justify-content: space-between;
+        .form-header {
+            text-align: center;
+            margin-bottom: 20px;
         }
 
-        .register-link {
-            display: block;
-            margin-top: 10px;
+        .toggle-link {
             text-align: center;
+            margin-top: 10px;
+            font-size: 14px;
+            cursor: pointer;
+            color: #3498db;
+        }
+
+        .toggle-link:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
 
-<div class="login-container">
-    <h2>Se connecter</h2>
-    <input type="text" id="username" placeholder="Nom d'utilisateur" required>
-    <input type="password" id="password" placeholder="Mot de passe" required>
-
-    <!-- Container pour les boutons de connexion et inscription -->
-    <div class="button-container">
+<div class="container" id="form-container">
+    <!-- Connexion Form -->
+    <div id="login-form">
+        <h2 class="form-header">Se connecter</h2>
+        <input type="text" id="login-username" placeholder="Nom d'utilisateur" required>
+        <input type="password" id="login-password" placeholder="Mot de passe" required>
         <button onclick="login()">Se connecter</button>
-        <button onclick="window.location.href='register.html'">S'inscrire</button>
+        <p class="toggle-link" onclick="toggleForm()">Pas encore de compte ? S'inscrire</p>
+    </div>
+
+    <!-- Inscription Form -->
+    <div id="register-form" style="display: none;">
+        <h2 class="form-header">S'inscrire</h2>
+        <input type="text" id="register-username" placeholder="Nom d'utilisateur" required>
+        <input type="password" id="register-password" placeholder="Mot de passe" required>
+        <input type="file" id="profile-picture" accept="image/*" required>
+        <button onclick="register()">S'inscrire</button>
+        <p class="toggle-link" onclick="toggleForm()">Déjà un compte ? Se connecter</p>
     </div>
 </div>
 
 <script>
+    // Function to toggle between login and register form
+    function toggleForm() {
+        const loginForm = document.getElementById('login-form');
+        const registerForm = document.getElementById('register-form');
+        if (loginForm.style.display === 'none') {
+            loginForm.style.display = 'block';
+            registerForm.style.display = 'none';
+        } else {
+            loginForm.style.display = 'none';
+            registerForm.style.display = 'block';
+        }
+    }
+
+    // Function to register a new user
+    function register() {
+        const username = document.getElementById('register-username').value;
+        const password = document.getElementById('register-password').value;
+        const profilePicture = document.getElementById('profile-picture').files[0];
+
+        if (username && password && profilePicture) {
+            // Save user data to localStorage
+            const users = JSON.parse(localStorage.getItem('users')) || [];
+            const newUser = {
+                username: username,
+                password: password,
+                profilePicture: URL.createObjectURL(profilePicture)
+            };
+
+            // Check if user already exists
+            if (users.some(user => user.username === username)) {
+                alert("Ce nom d'utilisateur est déjà pris !");
+                return;
+            }
+
+            users.push(newUser);
+            localStorage.setItem('users', JSON.stringify(users));
+            alert("Inscription réussie ! Vous pouvez maintenant vous connecter.");
+            toggleForm();  // Switch back to login form
+        } else {
+            alert("Veuillez remplir tous les champs.");
+        }
+    }
+
+    // Function to log in an existing user
     function login() {
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
+        const username = document.getElementById('login-username').value;
+        const password = document.getElementById('login-password').value;
 
         const users = JSON.parse(localStorage.getItem('users')) || [];
         const currentUser = users.find(user => user.username === username && user.password === password);
 
         if (currentUser) {
             localStorage.setItem('currentUser', JSON.stringify(currentUser));
-            window.location.href = 'index.html';  // Rediriger vers la carte après connexion
+            window.location.href = 'index.html';  // Rediriger vers la page principale après connexion
         } else {
             alert('Nom d\'utilisateur ou mot de passe incorrect');
         }
